fixed white overlay on mobile

--- a/src/MenuFigure.css
+++ b/src/MenuFigure.css
@@ -44,7 +44,7 @@
 }
 
 .filterMenuInfomatic {
-    width: 50%;
+    width: 100%;
     font-size: 1rem;
     color: #000;
     background-color: #fff;
@@ -67,7 +67,7 @@
 }
 
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 600px) and (min-width: 500px) {
     .filterMenuColumn {
         display: flex;
         justify-content: center;
@@ -95,5 +95,88 @@
         align-items: center;
         flex-direction: row;
         width: 100%;
+    }
+}
+
+
+@media only screen and (max-width: 499px) and (min-width: 350px) {
+    .filterMenuColumn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        margin: 0;
+        padding: 0;
+        flex: 1;
+        width: 0;
+    }
+
+    .filterMenuButtonImg {
+        height: 50px;
+        width: 50px;
+    }
+
+    .filterMenuButton {
+        position: relative;
+    }
+
+    #filterMenuRow {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: row;
+        width: 100%;
+    }
+
+    .filterMenuInfomatic {
+        width: 100%;
+        font-size: .6rem;
+        color: #000;
+        background-color: #fff;
+        justify-self: center;
+        align-self: center;
+        text-align: center;
+    }
+}
+
+@media only screen and (max-width: 349px) and (min-width: 249px) {
+    .filterMenuColumn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        margin: 0;
+        padding: 0;
+        flex: 1;
+        width: 0;
+    }
+
+    .filterMenuButtonImg {
+        height: 50px;
+        width: 50px;
+    }
+
+    .filterMenuButton {
+        position: relative;
+    }
+
+    #filterMenuRow {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: row;
+        width: 100%;
+    }
+
+    .filterMenuInfomatic {
+        width: 100%;
+        font-size: .5rem;
+        color: #000;
+        background-color: #fff;
+        justify-self: center;
+        align-self: center;
+        text-align: center;
     }
 }
